Removed a bug on sidebar collapse

--- a/public/portfolio/custom/custom.css
+++ b/public/portfolio/custom/custom.css
@@ -114,16 +114,11 @@ body {
 }
 
 .nav-item {
-    display: inline-block; 
-    vertical-align: middle;
+    display: block;
     object-fit: contain;
     width: 18vw;
     margin-left: 0.7vw;
     margin-right: 0.7vw;
-}
-
-.nav-item a {
-    height: 100%;
 }
 
 h1 {
@@ -164,10 +159,6 @@ h5 {
 .keywords {
     display: table-cell;
     vertical-align: middle;
-}
-
-.card, .nav-item, img {
-    box-shadow: 0px 4px 3px rgba(0,0,0,0.1);
 }
 
 .card {
